lookup query feature 🚀
